objects/copado__Project__c.object
<CustomObject>
    <description>Overall object for capturing the project details.</description>
    <fields>
        <fullName>Change_Management_Integration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Management Integration</label>
        <referenceTo>Change_Management_Integration_Credential__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Add here the Id of the record within your external Project Management system.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectType__c</fullName>
        <label>Project Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UserStories</fullName>
                    <label>User Stories</label>
                </value>
                <value>
                    <fullName>Bugfix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ProjectType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>812</fullName>
                    <label>Sprint 18</label>
                </value>
                <value>
                    <fullName>770</fullName>
                    <label>Sprint 17</label>
                </value>
                <value>
                    <fullName>858</fullName>
                    <label>Sprint 19</label>
                </value>
                <value>
                    <fullName>866</fullName>
                    <label>Sprint 20</label>
                </value>
                <value>
                    <fullName>867</fullName>
                    <label>Sprint 21</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workspace_Id__c</fullName>
        <inlineHelpText>For Rally, the workspace ID is required in addition to the External Project Id.</inlineHelpText>
        <label>Workspace Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workstream__c</fullName>
        <label>Workstream</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ProjectType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Arquitectura</fullName>
                </value>
                <value>
                    <fullName>CARE</fullName>
                </value>
                <value>
                    <fullName>Customer Master</fullName>
                </value>
                <value>
                    <fullName>EPC</fullName>
                </value>
                <value>
                    <fullName>Integration Procedure</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Mobile App</fullName>
                </value>
                <value>
                    <fullName>Sales - CPQ</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Technical Care</fullName>
                </value>
                <value>
                    <fullName>UX/UI Care</fullName>
                </value>
                <value>
                    <fullName>UX/UI Sales-CPQ</fullName>
                </value>
                <value>
                    <fullName>UX/UI Technical Care</fullName>
                </value>
                <value>
                    <fullName>xOM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Deployment_Flow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If working with Copado Change Management, the Project must be linked to a Deployment Flow.</inlineHelpText>
        <label>Deployment Flow</label>
        <referenceTo>copado__Deployment_Flow__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Index_Metadata__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this field is checked, Copado will index the metadata selected against the user stories into the User Story Metadata custom object. Indexed metadata can be used for reporting and compliance, and it&apos;s also used by Copado overlap awareness feature.</inlineHelpText>
        <label>Index Metadata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>Sprint_18</fullName>
        <columns>NAME</columns>
        <columns>ProjectType__c</columns>
        <columns>Workstream__c</columns>
        <columns>Sprint__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>812</value>
        </filters>
        <label>Sprint 18</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sprint_19</fullName>
        <columns>NAME</columns>
        <columns>ProjectType__c</columns>
        <columns>Workstream__c</columns>
        <columns>Sprint__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>858</value>
        </filters>
        <label>Sprint 19</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>all</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>